--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.18.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^8.1.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
