--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
     "axios": "0.21.1",
+    "jwt-decode": "^3.1.2",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "react-toastify": "^8.1.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
