--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
     "axios": "0.21.1",
+    "framer-motion": "^4.1.17",
     "jwt-decode": "^3.1.2",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
